# envgap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ROADMAP.md
docs/launch/: github-release-v0.1.1.md  newsletter-blurb.md  reddit-python.md  show-hn.md
envdoctor/: __init__.py  checker.py  cli.py
envdoctor/extractors/: dotenv.py  python_ast.py
envdoctor/model/: __init__.py  finding.py
envdoctor/reporters/: __init__.py  json.py  terminal.py
envgap/: __init__.py  checker.py  cli.py
envgap/extractors/: __init__.py  dotenv.py  python_ast.py
envgap/model/: __init__.py  env_source.py  expected_var.py
envgap/reporters/: __init__.py  json.py  terminal.py
examples/basic/: .env  .env.example  app.py
examples/fastapi/: .env  README.md  app.py
tests/: test_check.py  test_cli.py  test_dotenv.py  test_python_ast.py
