[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "envdoctor"
version = "0.1.0"
description = "Explain why your Python environment config is broken."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "envdoctor contributors" }]
keywords = ["environment", "dotenv", "configuration", "cli", "diagnostics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
envdoctor = "envdoctor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

