[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "envgap"
version = "0.1.0"
description = "Find the gaps in your Python environment config."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "envgap contributors" }]
keywords = ["environment", "dotenv", "configuration", "cli", "diagnostics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Pinak-Datta/envgap"
Repository = "https://github.com/Pinak-Datta/envgap"
Issues = "https://github.com/Pinak-Datta/envgap/issues"
Changelog = "https://github.com/Pinak-Datta/envgap/blob/main/CHANGELOG.md"

[project.scripts]
envgap = "envgap.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "twine>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
